--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
                         <a id="about" href="./about.html">ABout</a> 
                     </li>
                     <li class="top_ham_menu_nav_sub_list">
-                        <a id="Calendar" href="./Calendar.html">Calendar</a> 
+                        <a id="Calendar" href="./calendar.html">Calendar</a> 
                     </li>
                     <li class="top_ham_menu_nav_sub_list">
                         <a id="media" href="./media.html">Media</a> 
@@ -51,7 +51,7 @@
         <div class="top_header_logo_wrapper"><!-- LOGO -->
             <a href="./index.html" class="top_header_logo_link">
                 <h1 class="top_header_logo">
-                    <img src="./img/SVG/icon-logo.svg" alt="LOGO">
+                    <img src="./img/svg/icon-logo.svg" alt="LOGO">
                 </h1>
             </a>
         </div>
@@ -95,7 +95,7 @@
         <section class="about_1">
             <div class="about_1_img_wrapper"><!-- 圖片 -->
                 <img id="move_img" class="about_1_img_1" src="./img/about/about_img01.jpg" alt="home_img01.jpg"><!-- 橫向移動圖 -->
-                <img class="about_1_img_2" src="./img/SVG/v-overlay.svg" alt="v-overlay.svg"><!-- 遮罩圖 -->
+                <img class="about_1_img_2" src="./img/svg/v-overlay.svg" alt="v-overlay.svg"><!-- 遮罩圖 -->
             </div>
             <div class="about_1_contain_wrapper">
                 <div class="about_1_contain"><!-- 內文 -->
@@ -168,7 +168,7 @@
             <div class="about_3_center">
                 <div class="about_3_contain_top"><!-- 頂部字 -->
                     <div class="screen-rotation">
-                        <img src="./img/SVG/screen-rotation.svg" alt="screen-rotation.svg">
+                        <img src="./img/svg/screen-rotation.svg" alt="screen-rotation.svg">
                     </div>
                     <div class="about_3_contain_top_left"><!-- 靠左側 -->
                         <p class="about_3_contain_top_title">series</p>
@@ -542,7 +542,7 @@
         </section>
         <section class="about_4">
             <figure class="about_4_bg_img_wrapper"><!-- 背景 -->
-                <img class="about_4_bg_img" src="./img/SVG/curve-shape.svg" alt="curve-shape.svg">
+                <img class="about_4_bg_img" src="./img/svg/curve-shape.svg" alt="curve-shape.svg">
             </figure>
             <ul class="about_4_list_wrapper"><!-- 無限輪播圖 -->
                 <li class="about_4_list"><!-- 第一組 -->
@@ -662,12 +662,12 @@
         <div class="home_footer_center_top">
             <div class="home_footer_top">
                 <figure class="home_footer_top_bg">
-                    <img src="./img/SVG/v-shape.svg" alt="v-shape.svg">
+                    <img src="./img/svg/v-shape.svg" alt="v-shape.svg">
                 </figure>
                 <div class="home_footer_logo_wrapper">
                     <a href="./index.html">
                         <figure class="home_footer_logo_img_wrapper">
-                                <img class="home_footer_logo" src="./img/SVG/icon-footer_logo.svg" alt="icon-footer_logo.svg">
+                                <img class="home_footer_logo" src="./img/svg/icon-footer_logo.svg" alt="icon-footer_logo.svg">
                         </figure>
                     </a>
                 </div>
@@ -796,7 +796,7 @@
                     Website & Brand Identity by: </p>
                 <a href="#" class="home_footer_bottom_right_link">
                     <figure class="home_footer_bottom_right_img_wrapper">
-                        <img class="home_footer_bottom_right_img" src="./img/SVG/icon-superego_logo.svg" alt="icon-superego_logo.svg">
+                        <img class="home_footer_bottom_right_img" src="./img/svg/icon-superego_logo.svg" alt="icon-superego_logo.svg">
                     </figure>
                 </a>
             </div>
