--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <a id="about" href="./about.html">ABout</a> 
                     </li>
                     <li class="top_ham_menu_nav_sub_list">
-                        <a id="Calendar" href="./Calendar.html">Calendar</a> 
+                        <a id="Calendar" href="./calendar.html">Calendar</a> 
                     </li>
                     <li class="top_ham_menu_nav_sub_list">
                         <a id="media" href="./media.html">Media</a> 
@@ -54,7 +54,7 @@
         <div class="top_header_logo_wrapper"><!-- LOGO -->
             <a href="./index.html" class="top_header_logo_link">
                 <h1 class="top_header_logo">
-                    <img src="./img/SVG/icon-logo.svg" alt="LOGO">
+                    <img src="./img/svg/icon-logo.svg" alt="LOGO">
                 </h1>
             </a>
         </div>
@@ -588,7 +588,7 @@
         <section class="top_3">
             <div class="top_3_img_wrapper">
                 <img id="move_img" class="top_3_img_1" src="./img/home/home_img01.jpg" alt="home_img01.jpg"><!-- 背景圖 根據滾動距離橫向移動 -->
-                <img class="top_3_img_2" src="./img/SVG/v-overlay.svg" alt="v-overlay.svg"><!-- 背景遮罩圖 -->
+                <img class="top_3_img_2" src="./img/svg/v-overlay.svg" alt="v-overlay.svg"><!-- 背景遮罩圖 -->
             </div>
             <div class="top_3_contain_wrapper"><!-- 內容 -->
                 <div class="top_3_contain">
@@ -621,7 +621,7 @@
         </section>
         <section class="top_4">
             <figure class="top_4_bg_img_wrapper"><!-- 背景圖 -->
-                <img class="top_4_bg_img" src="./img/SVG/curve-shape.svg" alt="curve-shape.svg">
+                <img class="top_4_bg_img" src="./img/svg/curve-shape.svg" alt="curve-shape.svg">
             </figure>
             <ul class="top_4_list_wrapper"><!-- 無限輪播圖 -->
                 <li class="top_4_list">
@@ -1007,12 +1007,12 @@
         <div class="home_footer_center_top"><!-- 1280px 上方 -->
             <div class="home_footer_top">
                 <figure class="home_footer_top_bg"><!-- 背景底圖 -->
-                    <img src="./img/SVG/v-shape.svg" alt="v-shape.svg">
+                    <img src="./img/svg/v-shape.svg" alt="v-shape.svg">
                 </figure>
                 <div class="home_footer_logo_wrapper"><!-- 左側logo圖案 -->
                     <a href="./index.html">
                         <figure class="home_footer_logo_img_wrapper">
-                                <img class="home_footer_logo" src="./img/SVG/icon-footer_logo.svg" alt="icon-footer_logo.svg">
+                                <img class="home_footer_logo" src="./img/svg/icon-footer_logo.svg" alt="icon-footer_logo.svg">
                         </figure>
                     </a>
                 </div>
@@ -1136,7 +1136,7 @@
                     Website & Brand Identity by: </p>
                 <a href="#" class="home_footer_bottom_right_link"><!-- 連結icon -->
                     <figure class="home_footer_bottom_right_img_wrapper"><!-- 圖 -->
-                        <img class="home_footer_bottom_right_img" src="./img/SVG/icon-superego_logo.svg" alt="icon-superego_logo.svg">
+                        <img class="home_footer_bottom_right_img" src="./img/svg/icon-superego_logo.svg" alt="icon-superego_logo.svg">
                     </figure>
                 </a>
             </div>
