--- a/media-1.html
+++ b/media-1.html
@@ -24,7 +24,7 @@
                         <a id="about" href="./about.html">ABout</a> 
                     </li>
                     <li class="top_ham_menu_nav_sub_list">
-                        <a id="Calendar" href="./Calendar.html">Calendar</a> 
+                        <a id="Calendar" href="./calendar.html">Calendar</a> 
                     </li>
                     <li class="top_ham_menu_nav_sub_list">
                         <a id="media" href="./media.html">Media</a> 
@@ -51,7 +51,7 @@
         <div class="top_header_logo_wrapper"><!-- LOGO -->
             <a href="./index.html" class="top_header_logo_link">
                 <h1 class="top_header_logo">
-                    <img src="./img/SVG/icon-logo.svg" alt="LOGO">
+                    <img src="./img/svg/icon-logo.svg" alt="LOGO">
                 </h1>
             </a>
         </div>
@@ -182,12 +182,12 @@
         <div class="home_footer_center_top">
             <div class="home_footer_top">
                 <figure class="home_footer_top_bg">
-                    <img src="./img/SVG/v-shape.svg" alt="v-shape.svg">
+                    <img src="./img/svg/v-shape.svg" alt="v-shape.svg">
                 </figure>
                 <div class="home_footer_logo_wrapper">
                     <a href="./index.html">
                         <figure class="home_footer_logo_img_wrapper">
-                                <img class="home_footer_logo" src="./img/SVG/icon-footer_logo.svg" alt="icon-footer_logo.svg">
+                                <img class="home_footer_logo" src="./img/svg/icon-footer_logo.svg" alt="icon-footer_logo.svg">
                         </figure>
                     </a>
                 </div>
@@ -316,7 +316,7 @@
                     Website & Brand Identity by: </p>
                 <a href="#" class="home_footer_bottom_right_link">
                     <figure class="home_footer_bottom_right_img_wrapper">
-                        <img class="home_footer_bottom_right_img" src="./img/SVG/icon-superego_logo.svg" alt="icon-superego_logo.svg">
+                        <img class="home_footer_bottom_right_img" src="./img/svg/icon-superego_logo.svg" alt="icon-superego_logo.svg">
                     </figure>
                 </a>
             </div>
