--- a/news-1.html
+++ b/news-1.html
@@ -96,7 +96,7 @@
             <div class="news-1_1_center"><!-- 內文容器 -->
                 <div class="news-1_1_banner"><!-- 頂部圖 -->
                     <figure class="news-1_1_banner_img_wrapper">
-                        <img src="./img/NEWS/news-1_img01.jpg" alt="news-1_img01.jpg">
+                        <img src="./img/news/news-1_img01.jpg" alt="news-1_img01.jpg">
                     </figure>
                 </div>
                 <div class="news-1_1_contain_wrapper"><!-- 內文 -->
@@ -155,10 +155,10 @@
                         400,000 spectators at Silverstone will hardly be beaten when F1 and F2 are racing on the Red Bull Ring next weekend. But less will suffice to set the right mood on one of Vesti's favorite circuits and where he has been at the top of the podium several times.
                     </p>
                     <figure class="news-1_1_contain_img_wrapper"><!-- 圖片 -->
-                        <img src="./img/NEWS/news-1_img02.jpeg" alt="news-1_img02.jpeg">
+                        <img src="./img/news/news-1_img02.jpeg" alt="news-1_img02.jpeg">
                     </figure>
                     <figure class="news-1_1_contain_img_wrapper"><!-- 圖片 -->
-                        <img src="./img/NEWS/news-1_img03.jpeg" alt="news-1_img03.jpeg">
+                        <img src="./img/news/news-1_img03.jpeg" alt="news-1_img03.jpeg">
                     </figure>
                 </div>
             </div>
