--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         </div>
 
     </header>
-    <main id="swup" class="transition-fade"><!-- 內容區域 js-swup -->
+    <main id="swup" class="transition-fadein"><!-- 內容區域 js-swup -->
         <section class="top_1">
             <div class="top_1_bg_mask"></div>
             <div class="top_1_video_wrapper"><!-- 背景影片 -->
